test_src/compiler_errors/types/demotion/DemoteDoubleToLong.b
class DemoteDoubleToLong {
    void test(Long value) {
        value = 2.0;
        println(value);
    }
}
